syntax = "proto3";

option csharp_namespace = "NextCart.Contracts.Cart.Proto";

// import "google/protobuf/empty.proto";

message CreateCart {
    string id = 1;
}

message GetCart {}

message AddItem {
    string productId = 1;
}

message SetShippingAddress {
    string AddressId = 1;
    string FirstName = 2;
    string LastName = 3;
    string AddressLine1 = 4;
    string AddressLine2 = 5;
    string PostalCode = 6;
    string City = 7;
    string Country = 8;
    string Email = 9;
}

message IncreaseQuantity {
    string productId = 1;
}

message DecreaseQuantity {
    string productId = 1;
}

message RemoveItem {
    string productId = 1;
}

message Clear {

}

message ProductDto {
    string productId = 1;
    string name = 2;
    string url = 3;
    string mainImage = 4;
    float amount = 5;
    string currency = 6;
}

message ItemDto {
    ProductDto product = 1;
    float itemTotal = 2;
    int32 quantity = 3;
}

message AddressDto {
    string addressId = 1;
    string firstName = 2;
    string lastName = 3;
    string addressLine1 = 4;
    string addressLine2 = 5;
    string postalCode = 6;
    string city = 7;
    string country = 8;
    string email = 9;
}

message CartDto {
    string id = 1;
    repeated ItemDto items = 2;
    AddressDto shippingAddress = 3;
    float total = 4;

    int32 version = 99;
}

enum ErrorCode {
    Unknown = 0;
    CartNotFound = 1;
    DuplicateCartId = 2;
}

message ErrorDto {
    string message = 1;
    ErrorCode errorCode = 2;
    int32 httpErrorCode = 3;
}

message CartResponse {
    oneof data {
        CartDto cart = 1;
        ErrorDto error = 2;
    }
}
